update vue-router post

--- a/_posts/2019-07-05-Vue学习之路（一）.md
+++ b/_posts/2019-07-05-Vue学习之路（一）.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      Vue学习之路（一）
-subtitle:   咸鱼学vue，越学越……六？
+subtitle:   咸鱼学vue
 date:       2019-07-05
 author:     zhykirby
 header-img: img/post-bg-keybord.jpg
