--- a/_posts/2021-03-08-【翻译】系好您的“价值”腰带：“成长”可以带您狂奔.md
+++ b/_posts/2021-03-08-【翻译】系好您的“价值”腰带：“成长”可以带您狂奔.md
@@ -24,8 +24,8 @@ tags:
 
 紧张的贸易关系和全球日益增长的政治风险使得全球市场对于未来经济的走向充满了不确定性。再加上新冠的冲击，美国从战后以来最长的经济增长时期终结了（按照意思应该是经济增长）。在当前较为良好的利率环境——全球负收益债券达到17万亿美元（此处原文为in an already benign interest rate environment with $17T invested in assests yielding negative carry），投资者迫切寻求着增长，同时希求(demanding and hoping)进一步的降息来刺激经济恢复。
 
-不管经济背景怎么样，现在的事实是：价值投资在过去的十年表现不佳，价值投资者、资产拥有者都变得越来沮丧（对此越来越不满足）。我们现在已经到达的投资阶段，这个问题再次被提出：
-价值失效了吗？（Is Value Dead?）
+不管经济背景怎么样，现在的事实是：价值投资在过去的十年表现不佳，价值投资者、资产拥有者都变得越来沮丧（对此越来越不满足）。我们现在已经到达的投资阶段，这个问题再次被提出：  
+__价值失效了吗？__ （Is Value Dead?）  
 许多人试图解释价值投资不能带来令人满意的回报的原因（正回报positive returns）。有些人认为这本质上是经济的影响，有些人则强调这种投资风格在当前的行为环境下正在逐渐崩坏瓦解。(Some are economic in nature, while others stress potential breakdown of the style in a behavioral setting.)
 
 在最近的一份报告中（白皮书white paper），QMA的量化团队表明，对于价值型公司来说，基本面并没有发生变化。他们的收入增长与之前保持一致，他们的盈利能力稳定，他们资产负债表上的其他项也是如此——稳定。价值因子长期保持着弱势的表现，但是实际上这些低估值的公司并没有经历什么值得注意的结构性调整。不幸的是，相对市盈率相对历史上具有较大差距，对比昂贵的“成长型”股票差距更大（原文relative multiples continue to be stuck at  historically wide spreads, and are even wider compared to expensive “growth” companies，不太理解wide spreads）。我们所能做的就是利用我们的经验以及等待价值再次发挥作用的的环境到来。
